--- a/app/build.gradle
+++ b/app/build.gradle
@@ -91,5 +91,7 @@ dependencies {
     kapt "androidx.hilt:hilt-compiler:1.0.0"
     //Activity KTX for viewModels()
     implementation "androidx.activity:activity-ktx:1.4.0"
+    // Dots indicator
+    implementation 'me.relex:circleindicator:2.1.6'
 
 }
